# utils

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  review_approved_lzs.py  test_substring_matching.py
configs/: settings.yaml  settings.yml
docs/: LOGGING.md  start-servers-usage.md  usuage.md
examples/: __init__.py  config_manager_example.py  create_ami_usage.py  ec2_usage_examples.py  simple_usage.py  substring_matching_guide.md  supported_aws_services.md  tag_nis_managed_example.md  zone_processor_example.py
jobs/: delete_old_backups.py  list_old_snapshots.py  list_windows_servers.py  manage_resource_tags.py  manage_resource_tags_pipeline.py  manage_resource_tags_simplified.py  review_approved_lzs.py  scan_tagged_resources.py
scripts/: install.sh
src/aws_ops/: cli.py
src/aws_ops/core/: __init__.py  constants.py
src/aws_ops/core/aws/: __init__.py  ec2.py  ssm.py
src/aws_ops/core/models/: __init__.py  ami.py  server.py  snapshot.py  tags.py
src/aws_ops/core/processors/: __init__.py  report_generator.py  zone_processor.py
src/aws_ops/examples/: server_models_usage.py  snapshot_models_usage.py
src/aws_ops/jobs/: __init__.py  base.py  cleanup_snapshots.py  create_ami.py  manage_backups.py  manage_resource_tags.py  manage_servers.py  review_approved_lzs.py  run_ssm.py  scan_backups.py  scan_servers.py  start_servers.py  stop_servers.py  update_ami.py
src/aws_ops/utils/: __init__.py  config.py  decorators.py  ec2_utils.py  exceptions.py  logger.py  lz.py  session.py
tests/: assume_role.py
utils/: __init__.py  config.py  lz.py  session.py
